tests/derive_ui/skip_flatten.stderr
error: `flatten` cannot be used with `skip`
  --> tests/derive_ui/skip_flatten.rs:17:21
   |
17 |     #[command(skip, flatten)]
   |                     ^^^^^^^
